--- a/atlas/pubspec.yaml
+++ b/atlas/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  material_design_icons_flutter: ^6.2.0
 
 flutter:
   uses-material-design: true
