--- a/atlas/pubspec.yaml
+++ b/atlas/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
     sdk: flutter
     
   google_books_api: ^1.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  material_design_icons_flutter: ^6.2.0
 
 flutter:
   uses-material-design: true
