--- a/atlas/pubspec.yaml
+++ b/atlas/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.0-102.0.dev <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.2
   firebase_core: ^2.24.2
   fl_chart: ^0.66.1
   flutter:
