--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
     "cSpell.words": [
         "wdbc"
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#372b7d",
+        "activityBar.background": "#372b7d",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#a64939",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#372b7d",
+        "statusBar.background": "#261e57",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#372b7d",
+        "statusBarItem.remoteBackground": "#261e57",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#261e57",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#261e5799",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#261e57"
 }
